# appsec-project

./: .gitignore  README.md  pyproject.toml
appsec_project/: __main__.py  common_read.py  model.py  statutils.py  storage.py  win_read_cli.py
report/: report.tex
tests/: test_db.py  test_statistics.py
